Add reviews table and related it with shelter along with review model and controller

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -22,3 +22,12 @@
 
     <%= button_to "Delete Shelter", "/shelters/#{@shelter.id}", method: :delete %>
   </section>
+
+  <section>
+    <h1>Reviewa</h1>
+    <% @reviews.each do |review| %>
+    <p>Title: <%= review.title %></p>
+    <p>Rating: <%= review.rating %></p>
+    <p>Content: <%= review.content %></p>
+    <% end %>
+  </section>
