--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -24,10 +24,11 @@
   </section>
 
   <section>
-    <h1>Reviewa</h1>
-    <% @reviews.each do |review| %>
+    <h1>Reviews</h1>
+    <% @shelter.reviews.each do |review| %>
     <p>Title: <%= review.title %></p>
     <p>Rating: <%= review.rating %></p>
-    <p>Content: <%= review.content %></p>
+    <p>Review: <%= review.content %></p>
+    <%= image_tag review.image, alt: "Customer Photo of #{@shelter.name}", title: "Customer Photo of #{@shelter.name}" %>
     <% end %>
   </section>
