--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -23,7 +23,7 @@
     <%= button_to "Delete Shelter", "/shelters/#{@shelter.id}", method: :delete %>
   </section>
 
-  <section>
+  <section class="review-section">
     <h1>Reviews</h1>
     <% @shelter.reviews.each do |review| %>
     <p>Title: <%= review.title %></p>
