Working on review create_spec.rb

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,12 +1,12 @@
-<%= form_tag "/shelters/#{@shelter.id}" do %>
-  <%= label_tag :Title %>
+<%= form_tag "/shelters/#{@shelter.id}/reviews" do %>
+  <%= label_tag :title %>
   <%= text_field_tag :title %>
-  <%= label_tag :Rating %>
+  <%= label_tag :rating %>
   <%= text_field_tag :rating %>
-  <%= label_tag :Content %>
+  <%= label_tag :content %>
   <%= text_field_tag :content %>
   <%= label_tag :image %>
   <%= text_field_tag :image %>
 
-  <%= submit_tag "Add" %>
+  <%= submit_tag "Submit" %>
 <% end %>
