--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -21,14 +21,15 @@
     <%= link_to "Update Shelter", "/shelters/#{@shelter.id}/edit" %><br><br><br>
 
     <%= button_to "Delete Shelter", "/shelters/#{@shelter.id}", method: :delete %>
-  </section>
+  </section><br><br><br><br>
 
   <section>
-    <%= link_to "Add Review", "/shelters/#{@shelter.id}/reviews/new" %>
     <h1>Reviews</h1>
-    <% @reviews.each do |review| %>
+    <%= link_to "Add Review", "/shelters/#{@shelter.id}/reviews/new" %>
+    <% @shelter.reviews.each do |review| %>
     <p>Title: <%= review.title %></p>
-    <p>Rating: <%= review.rating %></p>
+    <p>Rating: <%= review.rating %> stars</p>
     <p>Content: <%= review.content %></p>
+    <%= link_to "Edit #{review.title}", "/reviews/#{review.id}/edit" %><br><br><br>
     <% end %>
   </section>
