--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -12,16 +12,16 @@
     <h1>Create a New Shelter </h1>
 
     <%= form_tag "/shelters" do %>
-      <%= label_tag :name %>
-      <%= text_field_tag :name %>
-      <%= label_tag :address %>
-      <%= text_field_tag :address %>
-      <%= label_tag :city %>
-      <%= text_field_tag :city %>
-      <%= label_tag :state %>
-      <%= text_field_tag :state %>
-      <%= label_tag :zip_code %>
-      <%= text_field_tag :zip_code %>
+      <%= label_tag :name %><br>
+      <%= text_field_tag :name %><br><br>
+      <%= label_tag :address %><br>
+      <%= text_field_tag :address %><br><br>
+      <%= label_tag :city %><br>
+      <%= text_field_tag :city %><br><br>
+      <%= label_tag :state %><br>
+      <%= text_field_tag :state %><br><br>
+      <%= label_tag :zip_code %><br>
+      <%= text_field_tag :zip_code %><br><br>
       <%= submit_tag "Create Shelter" %>
     <% end %>
   </section>
