--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,14 +1,31 @@
+<% content_for :title, "Edit Review - Adopt Don't Shop" %>
 
+  <header>
+  </header>
+  <nav>
+    <ul>
+      <li><%= link_to "All Pets", "/pets" %></li>
+      <li><%= link_to "All Shelters", "/shelters" %></li>
+    </ul>
+  </nav>
+  <section class="form">
+    <h1>Edit Review</h1><br>
 
-<%= form_tag "/shelters/#{@shelter.id}" do %>
-  <%= label_tag :Title %>
-  <%= f.text_field_tag :title %>
-  <%= label_tag :Rating %>
-  <%= f.text_field_tag :rating %>
-  <%= label_tag :Content %>
-  <%= f.text_field_tag :content %>
-  <%= label_tag :image %>
-  <%= f.text_field_tag :image %>
+    <% flash.each do |type, msg| %>
+      <div>
+        <%= msg %>
+      </div><br><br><br>
+    <% end %>
 
-  <%= submit_tag "Submit" %>
-<% end %>
+    <%= form_tag "/reviews/#{@review.id}", method: :patch do %>
+      <%= label_tag :title %>
+      <%= text_field_tag :title, @review.title %><br>
+      <%= label_tag :rating %>
+      <%= text_field_tag :rating, @review.rating %><br>
+      <%= label_tag :content %>
+      <%= text_field_tag :content, @review.content %><br>
+      <%= label_tag :image %>
+      <%= text_field_tag :image, @review.image %><br><br>
+      <%= submit_tag "Update Review" %>
+    <% end %>
+  </section>
