Create favorites functionality through User Story 9

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><%= link_to "All Pets", "/pets" %></li>
+        <li><%= link_to "All Shelters", "/shelters" %></li>
+        <li><%= "Favorites: #{favorite.total_count}" %></li>
+      </ul>
+    </nav>
+    <%  flash.each do |type, message| %>
+      <section class=<%= type %>>
+        <p><%= message %></p>
+      </section>
+    <% end %>
     <%= yield %>
   </body>
 </html>
