--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -8,7 +8,7 @@
     <p>Age: <%= @pet.age %></p>
     <p>Sex: <%= @pet.sex %></p>
     <p>Adoption Status:
-      <% if @pet.status ==true %>
+      <% if @pet.status %>
       Adoptable
       <% else %>
       Adoption Pending
