--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -14,4 +14,5 @@
     <% end %>
   </section>
 
+  <p><%= link_to "Apply Now", "/apps/new" %>
   <p><%= button_to "Remove all favorited pets", "/favorites", method: :delete %></p>
