--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -2,7 +2,7 @@
 
 
   <section class="show">
-    <h1><%= @shelter.name %></h1>
+    <h1><%= "#{@shelter.name}" %></h1>
 
     <p>Address: <%= @shelter.address %></p><br>
     <p>City: <%= @shelter.city %></p><br>
