--- a/app/views/shelters/pets_index.html.erb
+++ b/app/views/shelters/pets_index.html.erb
@@ -4,16 +4,18 @@
   <section class="index">
     <h1><%= link_to @shelter.name, "/shelters/#{@shelter.id}" %> Available Pets!</h1>
 
-    <% @pets.each do |pet| %>
-      <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
-        <%= image_tag pet.image, alt: "Photo of #{pet.name}", title: "Photo of #{pet.name}" %>
-        <p>Age: <%= pet.age %></p>
-        <p>Sex: <%= pet.sex %></p>
-        <p>Adoption Status: Adoptable</p>
-        <p>Shelter: <%= link_to "#{@shelter.name}", "/shelters/#{@shelter.id}" %></p><br><br>
-        <p><%= link_to "Edit #{pet.name}", "/pets/#{pet.id}/edit" %></p><br>
-        <%= button_to "Delete #{pet.name}", "/pets/#{pet.id}", method: :delete %><br><br>
-    <% end %>
+    <section class="pet_list">
+      <% @pets.each do |pet| %>
+        <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
+          <%= image_tag pet.image, alt: "Photo of #{pet.name}", title: "Photo of #{pet.name}" %>
+          <p>Age: <%= pet.age %></p>
+          <p>Sex: <%= pet.sex %></p>
+          <p>Adoption Status: Adoptable</p>
+          <p>Shelter: <%= link_to "#{@shelter.name}", "/shelters/#{@shelter.id}" %></p><br><br>
+          <p><%= link_to "Edit #{pet.name}", "/pets/#{pet.id}/edit" %></p><br>
+          <%= button_to "Delete #{pet.name}", "/pets/#{pet.id}", method: :delete %><br><br>
+      <% end %>
+    </section>
 
     <h3>Put a pet up for adoption</h3>
     <%= link_to "Create Pet", "/shelters/#{@shelter.id}/pets/new" %><br><br>
