Add shelter form partial for new shelter and update shelter

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -17,15 +17,9 @@
       </div><br><br><br>
     <% end %>
 
-    <%= form_tag "/reviews/#{@review.id}", method: :patch do %>
-      <%= label_tag :title %>
-      <%= text_field_tag :title, @review.title %><br>
-      <%= label_tag :rating %>
-      <%= text_field_tag :rating, @review.rating %><br>
-      <%= label_tag :content %>
-      <%= text_field_tag :content, @review.content %><br>
-      <%= label_tag :image %>
-      <%= text_field_tag :image, @review.image %><br><br>
-      <%= submit_tag "Update Review" %>
-    <% end %>
+    <%= render partial: 'review_form', locals: { path: "/reviews/#{@review.id}",
+                                                 method: :patch,
+                                                 button: 'Update Review',
+                                                 review: @review } %>
+
   </section>
