--- a/app/views/reviews/_review_form.html.erb
+++ b/app/views/reviews/_review_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_tag path, method: method do %>
-  <%= label_tag :title %>
-  <%= text_field_tag :title, @review.title %><br>
-  <%= label_tag :rating %>
-  <%= text_field_tag :rating, @review.rating %><br>
-  <%= label_tag :content %>
-  <%= text_field_tag :content, @review.content %><br>
-  <%= label_tag :image %>
-  <%= text_field_tag :image, @review.image %><br><br>
+  <%= label_tag :title %><br>
+  <%= text_field_tag :title, @review.title %><br><br>
+  <%= label_tag :rating %><br>
+  <%= text_field_tag :rating, @review.rating %><br><br>
+  <%= label_tag :content %><br>
+  <%= text_field_tag :content, @review.content %><br><br>
+  <%= label_tag :image %><br>
+  <%= text_field_tag :image, @review.image %><br><br><br>
 
   <%= submit_tag button %>
 <% end %>
