--- a/app/views/shelters/_shelter_form.html.erb
+++ b/app/views/shelters/_shelter_form.html.erb
@@ -8,6 +8,7 @@
   <%= label_tag :state %><br>
   <%= text_field_tag :state, @shelter.state %><br><br>
   <%= label_tag :zip_code %><br>
-  <%= text_field_tag :zip_code, @shelter.zip_code %><br><br>
+  <%= text_field_tag :zip_code, @shelter.zip_code %><br><br><br>
+  
   <%= submit_tag button %>
 <% end %>
