--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -10,5 +10,6 @@
   <p>Description: <%= @app.description %></p>
   <%  @app.pets.each do |pet| %>
     <p><%= link_to "#{pet.name}", "/pets/#{pet.id}" %>
+    <p><%= button_to "Approve Application for #{pet.name}", "/pets/#{pet.id}/apps/#{@app.id}", method: :patch %>
   <% end %>
 </section>
