--- a/app/views/shelters/_shelter_form.html.erb
+++ b/app/views/shelters/_shelter_form.html.erb
@@ -9,6 +9,18 @@
   <%= text_field_tag :state, @shelter.state %><br><br>
   <%= label_tag :zip_code %><br>
   <%= text_field_tag :zip_code, @shelter.zip_code %><br><br><br>
-  
+
   <%= submit_tag button %>
+
+  <% if @shelter.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@shelter.errors.count, "error") %> prohibited this shelter from being saved:</h2>
+
+    <ul>
+      <% @shelter.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
 <% end %>
