--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -11,7 +11,9 @@
   <%  @app.pets.each do |pet| %>
     <p><%= link_to "#{pet.name}", "/pets/#{pet.id}" %>
     <% if pet.status %>
-      <p><%= button_to "Approve Application for #{pet.name}", "/pets/#{pet.id}/apps/#{@app.id}", method: :patch %>
+        <p><%= button_to "Approve Application for #{pet.name}", "/pets/#{pet.id}/apps/#{@app.id}", method: :patch %>
+      <% else %>
+        <%= button_to "Revoke Approval for #{pet.name}", "/pets/#{pet.id}/apps/#{@app.id}", method: :patch%>
     <% end %>
   <% end %>
 </section>
