--- a/app/views/reviews/_review_form.html.erb
+++ b/app/views/reviews/_review_form.html.erb
@@ -2,7 +2,7 @@
   <%= label_tag :title %><br>
   <%= text_field_tag :title, @review.title %><br><br>
   <%= label_tag :rating %><br>
-  <%= text_field_tag :rating, @review.rating %><br><br>
+  <%= number_field_tag :rating, nil, within: 1..5 %><br><br>
   <%= label_tag :content %><br>
   <%= text_field_tag :content, @review.content %><br><br>
   <%= label_tag :image %><br>
