Add line breaks for readability

--- a/app/views/apps/new.html.erb
+++ b/app/views/apps/new.html.erb
@@ -7,20 +7,20 @@
       <%= label_tag :pets, "Select pets to Adopt" %><br>
        <%= select_tag 'favorite_pets[]', options_for_select(@favorites.map {|pet| [pet.name, pet.id]}), multiple: :true, required: :true %><br>
        <p>Your Information</p>
-       <%= label_tag :name%>
-       <%= text_field_tag :name %><br>
-       <%= label_tag :address%>
-       <%= text_field_tag :address %><br>
-       <%= label_tag :city %>
-       <%= text_field_tag :city %><br>
-       <%= label_tag :state %>
-       <%= text_field_tag :state %><br>
-       <%= label_tag :zip %>
-       <%= text_field_tag :zip %><br>
-       <%= label_tag :phone_number %>
-       <%= text_field_tag :phone_number %><br>
+       <%= label_tag :name%><br>
+       <%= text_field_tag :name %><br><br>
+       <%= label_tag :address%><br>
+       <%= text_field_tag :address %><br><br>
+       <%= label_tag :city %><br>
+       <%= text_field_tag :city %><br><br>
+       <%= label_tag :state %><br>
+       <%= text_field_tag :state %><br><br>
+       <%= label_tag :zip %><br>
+       <%= text_field_tag :zip %><br><br>
+       <%= label_tag :phone_number %><br>
+       <%= text_field_tag :phone_number %><br><br>
        <%= label_tag :description, "Why would you like to adopt?" %><br>
-       <%= text_field_tag :description %><br>
+       <%= text_field_tag :description %><br><br><br>
        <%= submit_tag "Submit" %>
 
     <% end %>
