--- a/app/views/shelters/pets_index.html.erb
+++ b/app/views/shelters/pets_index.html.erb
@@ -11,12 +11,13 @@
           <p>Age: <%= pet.age %></p>
           <p>Sex: <%= pet.sex %></p>
           <p>Adoption Status: Adoptable</p>
-          <p>Shelter: <%= link_to "#{@shelter.name}", "/shelters/#{@shelter.id}" %></p><br><br>
-          <p><%= link_to "Edit #{pet.name}", "/pets/#{pet.id}/edit" %></p><br>
-          <%= button_to "Delete #{pet.name}", "/pets/#{pet.id}", method: :delete %><br><br>
+          <p>Shelter: <%= link_to "#{@shelter.name}", "/shelters/#{@shelter.id}" %></p>
+          <p><%= link_to "Edit #{pet.name}", "/pets/#{pet.id}/edit" %></p>
+          <%= button_to "Delete #{pet.name}", "/pets/#{pet.id}", method: :delete %><br><br><br><br><br>
       <% end %>
     </section>
-
+  </section>
+  <section>
     <h3>Put a pet up for adoption</h3>
     <%= link_to "Create Pet", "/shelters/#{@shelter.id}/pets/new" %><br><br>
-    </section>
+  </section>
